--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">app-map</string>
-    <string name="title_activity_main">app-map</string>
-    <string name="package_name">com.example.app</string>
-    <string name="custom_url_scheme">com.example.app</string>
+    <string name="app_name">app-map-final</string>
+    <string name="title_activity_main">app-map-final</string>
+    <string name="package_name">com.appMap.app.final</string>
+    <string name="custom_url_scheme">com.appMap.app.final</string>
 </resources>
